sistema de vista de cuentas de usuario con modal

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,6 +12,8 @@
 @import "pedidosCompletados.scss";
 @import "adminProductModal.scss";
 @import "./utils/loaderSpinner.scss";
+@import "userList.scss";
+@import "userModal.scss";
 
 * {
     margin: 0;
